# ISYE6748

./: .editorconfig  .gitattributes  .gitignore  NOTES.md  README.md  package.json
Final Report/: Report.tex
Mid-term Presentation/: README.md
References et cetera/: Capgemini Presentation on Use Cases.pptx  regression-versus-cf.acorn
analysis/: 000-initial-run.ipynb  100-layer-frequencies.py  110-frequency-checks.ipynb  400-similarity-matrices.ipynb  500-evaluation.ipynb  README.md  requirements.txt  util.py  x10-process_layer_1_data.py  x10-process_layer_2_data.py  x10-process_layer_3_data.py  y10-process_children.py  y20-smush_layers.py
client/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
client/public/: index.html
client/src/: App.css  App.scss  App.tsx  fonts.scss  vite-env.d.ts
data/: README.md
data/layers/: README.md  all_layers_list.json  all_layers_map.json  ignored_classes.json  layer_1.json  layer_1__filtered.json  layer_1_raw.txt  layer_2.json  layer_2__filtered.json  layer_2_raw.txt  layer_3.json  layer_3__filtered.json  layer_3_raw.txt
data/processed/: 100-layer-frequencies_layer_1.parquet  (+1 more)
documents/: Assorted Notes.md  README.md
scripts/: deploy-client.sh  gunicorn.service  nginx.icd10ninja  provision-server.sh  setup-client.sh  setup-server.sh  start-client.sh  start-server.sh
server/: README.md  constants.py  data_maps.py  exceptions.py  item_item.py  pyproject.toml  requirements.txt  server.py  user_item.py  user_user.py
server/data/: README.md
(+14742 files in other folders)
