[project]
name = "server"
version = "1.1.0"
authors = [{ name = "Nikhil Anand", email = "anand.nikhil@gmail.com" }]
dependencies = [
  "flask>=3.1.0",
  "gunicorn>=23.0.0",
  "numpy>=2.2.1",
  "pandas>=2.2.3",
  "pyarrow>=18.1.0",
]
description = "Server for the ICD10.ninja website"
license = "GNU GPLv3"
maintainers = [{ name = "Nikhil Anand", email = "anand.nikhil@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
